test/errors/parsing/implicitSubModule.chpl
module M {
   var x = 1;
}
use List;
